--- a/static/index.html
+++ b/static/index.html
@@ -1646,22 +1646,14 @@
         <h1>KI Trading Model Dashboard</h1>
         <div class="header-info">
             <div class="api-docs-buttons">
-                <a href="/docs" target="_blank" class="btn-api-docs btn-backend" title="Backend API (Swagger UI)">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
-                        <line x1="8" y1="21" x2="16" y2="21"></line>
-                        <line x1="12" y1="17" x2="12" y2="21"></line>
-                    </svg>
-                    Backend
-                </a>
-                <a href="/redoc" target="_blank" class="btn-api-docs btn-frontend" title="Frontend API (ReDoc)">
+                <a href="/docs" target="_blank" class="btn-api-docs" title="API Dokumentation (Swagger UI)">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
                         <polyline points="14 2 14 8 20 8"></polyline>
                         <line x1="16" y1="13" x2="8" y2="13"></line>
                         <line x1="16" y1="17" x2="8" y2="17"></line>
                     </svg>
-                    Frontend
+                    API Docs
                 </a>
             </div>
             <div class="release-info">
